Resolves: tdf#150743 disable keep ratio is any value is zero

can't divide by zero

Change-Id: Ia6f60e1614a621cee7eaa6029cf0eefda32210bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189997
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 7d2b92d0e78751ac00d25dd312f7bc77abe96b4e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190001
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>